# Max-clique-finding-using-CPLEX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.txt
cmake/: FindCplex.cmake
graphs/: simple.clq
source/: common.hpp  graph.cpp  graph.h  heuristic.hpp  main.cpp  model.hpp  ngraph.hpp  solution.cpp  solution.h  solver.cpp  solver.h  utils.hpp
tasks/: custom.txt  hardcr.txt  medium.txt  simple.txt
